styles: changed the review style. now you can se the cover. Fixed some issues in the review cards and description overflow

--- a/client/src/components/Reviews/CardReview/CardReview.module.css
+++ b/client/src/components/Reviews/CardReview/CardReview.module.css
@@ -72,13 +72,18 @@
     text-overflow: ellipsis;
 }
 
+#descriptionContainer {
+    /* background-color: red; */
+    width: 100%;
+    overflow: hidden;
+    height: 1rem;
+}
+
 #description {
-    font-size: 1rem;
+    font-size: 0.7rem;
     /* background-color: rgb(240, 144, 18); */
     margin: 0;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    text-align: left;
 }
 
 #scoreContainer {
