--- a/client/src/components/Reviews/ReviewContent/ReviewContent.module.css
+++ b/client/src/components/Reviews/ReviewContent/ReviewContent.module.css
@@ -1,5 +1,57 @@
 #reviewContent {
-    /* background-color: red; */
+    /* background-color: darkcyan; */
     width: 100%;
     height: auto;
+}
+
+#titleCoverContainer {
+    /* background-color: red; */
+    width: 100%;
+    height: 40vw;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+#title {
+    /* background-color: aqua; */
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    z-index: 100;
+
+    text-align: center;
+    font-size: 4rem;
+    font-family: "DeezerFont";
+    color: #eaeaea;
+    margin-bottom: 1rem;
+}
+
+#coverContainer {
+    /* background-color: red; */
+    /* display: flex; */
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+#coverContainer:after {
+    content: '';
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    height: 80%;
+    bottom: 0px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 100%);
+}
+
+
+
+#cover {
+    width: 100%;
+    position: absolute;
+    left: 0%;
+    top: -50%;
+    /* filter: blur(2px); */
 }
