--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -8,7 +8,7 @@
     border-bottom: #eaeaea;
     border-bottom-style: solid;
     border-width: 1px;
-    /* padding-left: 24px; */
+    padding-left: 24px;
     padding-right: 24px;
     position: fixed;
     max-width: calc(100% - 265px);
